fixed an issue with the footer hiding the submit button on small screens
updated the home.js cypress tests to include the new object based value storage

unit test coverage needs updating

--- a/src/components/editor/BlogEditor.scss
+++ b/src/components/editor/BlogEditor.scss
@@ -31,3 +31,9 @@
     margin-top: 20px;
   }
 }
+
+.container {
+  &--override {
+    overflow: auto;
+  }
+}
